# OpenNICalibTool

./: CMakeLists.txt  CalibTest.cpp  OpenNICapture.cpp  OpenNIEngine.cpp  OpenNIEngine.h  README.md  StereoCalib.cpp  main.cpp
cmake/: FindOpenNI.cmake
